fix(ProductLoader): 재고 조회 오류 수정
재고 파일에서 프로모션 상품만 존재하는 경우, 자동으로 일반 재고는 재고 없음으로 추가하도록 수정